--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@
     top: 3.1em;
     z-index: 0;
   }
+  div.index div.index
+  {
+    top: 0em;
+  }
   div.refnamediv
   {
     margin-top: 2em;
